--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     
     <link rel="icon" href="image/favicon.png">
 
@@ -186,7 +186,7 @@
     </div>
 
     <div class="image">
-        <img src="image/20220601123652_IMG_0044.jpg"" class="home-img">
+        <img src="20220601123652_IMG_0044.jpg"" class="home-img">
        
     </div>
 
