--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     
     <link rel="icon" href="image/favicon.png">
 
@@ -186,7 +186,7 @@
     </div>
 
     <div class="image">
-        <img src="20220601123652_IMG_0044.jpg"" class="home-img">
+        <img src="image/20220601123652_IMG_0044.jpg"" class="home-img">
        
     </div>
 
@@ -278,280 +278,53 @@
         <h3>our dishes</h3>
     </div>
 
-    <div class="box-container">
 
-        <div class="box">
-            <a href="#" class="fas fa-heart"></a>
-            <div class="image">
-                <img src="image/food-5.png" alt="">
-            </div>
-            <div class="content">
-                <h3>non-veg pizza</h3>
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
-                    <span> (60) </span>
-                </div>
-                <div class="price">₹80.00 <span>₹120.00</span></div>
-                <a href="#" class="btn">add to cart</a>
-            </div>
-        </div>
-
-        <div class="box">
-            <a href="#" class="fas fa-heart"></a>
-            <div class="image">
-                <img src="image/food-6.png" alt="">
-            </div>
-            <div class="content">
-                <h3>veg pizza</h3>
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <span> (100) </span>
-                </div>
-                <div class="price">₹70.00 <span>₹80.00</span></div>
-                <a href="#" class="btn">add to cart</a>
-            </div>
-        </div>
-
-        <div class="box">
-            <a href="#" class="fas fa-heart"></a>
-            <div class="image">
-                <img src="image/food-7.png" alt="">
-            </div>
-            <div class="content">
-                <h3>burger</h3>
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
-                    <span> (75) </span>
-                </div>
-                <div class="price">₹125.00 <span>₹160.00</span></div>
-                <a href="#" class="btn">add to cart</a>
-            </div>
-        </div>
-
-        <div class="box">
-            <a href="#" class="fas fa-heart"></a>
-            <div class="image">
-                <img src="image/food-4.png" alt="">
-            </div>
-            <div class="content">
-                <h3>veg burger</h3>
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
-                    <span> (120) </span>
-                </div>
-                <div class="price">₹90.00 <span>₹130.00</span></div>
-                <a href="#" class="btn">add to cart</a>
-            </div>
-        </div>
-
-        <div class="box">
-            <a href="#" class="fas fa-heart"></a>
-            <div class="image">
-                <img src="image/food-1.png" alt="">
-            </div>
-            <div class="content">
-                <h3>delicious jiaozi</h3>
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
-                    <span> (70) </span>
-                </div>
-                <div class="price">₹100.00 <span>₹130.00</span></div>
-                <a href="#" class="btn">add to cart</a>
-            </div>
-        </div>
-
-        <div class="box">
-            <a href="#" class="fas fa-heart"></a>
-            <div class="image">
-                <img src="image/food-2.png" alt="">
-            </div>
-            <div class="content">
-                <h3>cheese burger</h3>
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star-half-alt"></i>
-                    <span> (85) </span>
-                </div>
-                <div class="price">₹120.00 <span>₹150.00</span></div>
-                <a href="#" class="btn">add to cart</a>
-            </div>
-        </div>
-
-        <div class="box">
-            <a href="#" class="fas fa-heart"></a>
-            <div class="image">
-                <img src="image/food-3.png" alt="">
-            </div>
-            <div class="content">
-                <h3>delicious pizza</h3>
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <span> (90) </span>
-                </div>
-                <div class="price">₹100.00 <span>₹170.00</span></div>
-                <a href="#" class="btn">add to cart</a>
-            </div>
-        </div>
-
-        <div class="box">
-            <a href="#" class="fas fa-heart"></a>
-            <div class="image">
-                <img src="image/food-8.png" alt="">
-            </div>
-            <div class="content">
-                <h3>cheese pizza</h3>
-                <div class="stars">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <span> (70) </span>
-                </div>
-                <div class="price">₹100.00 <span>₹150.00</span></div>
-                <a href="#" class="btn">add to cart</a>
-            </div>
-        </div>
-
-    </div>
-
-</section>
-
-<!-- popular section ends -->
-
-<!-- banner section starts  -->
-
-<section class="banner">
-
-    <div class="row-banner">
-        <div class="content">
-            <span>double cheese</span>
-            <h3>burger</h3>
-            <p>with fries and cocacola</p>
-            <a href="#" class="btn">order now</a>
-        </div>
-    </div>
-
-    <div class="grid-banner">
-        <div class="grid">
-            <img src="image/banner-1.png" alt="">
-            <div class="content">
-                <span>special offer</span>
-                <h3>upto 20% off</h3>
-                <a href="#" class="btn">order now</a>
-            </div>
-        </div>
-        <div class="grid">
-            <img src="image/banner-2.png" alt="">
-            <div class="content center">
-                <span>special offer</span>
-                <h3>upto 50% extra</h3>
-                <a href="#" class="btn">order now</a>
-            </div>
-        </div>
-        <div class="grid">
-            <img src="image/banner-3.png" alt="">
-            <div class="content">
-                <span>limited offer</span>
-                <h3>100% cashback</h3>
-                <a href="#" class="btn">order now</a>
-            </div>
-        </div>
-    </div>
-
-</section>
 
 <!-- banner section ends -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
+<script type="text/javascript" src="jquerycontent.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+</head>
+<body>
+<div id="container">
+    <header>
+        <h1>jQuery Content Slider</h1>
+    </header>
+    <i id="prev" class="fa fa-chevron-left" aria-hidden="true"></i>
+    <div id="slider">
+        <div class="slide">
+            <div class="slide-copy">
+                <h2>Slider One</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque placerat dolor nibh, eget ultrices orci congue ut. Nunc ut magna ac quam bibendum elementum. Cras urna sapien, gravida eget velit eu, tempor consequat risus. Proin odio arcu, facilisis in fringilla sed, hendrerit eu nibh. Suspendisse non orci pretium risus egestas iaculis. </p>
+            </div>
+            <img src="image/logo_krabat_milchwelt_158px.png">
+        </div>
+        <div class="slide">
+            <div class="slide-copy">
+                <h2>Slider Two</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque placerat dolor nibh, eget ultrices orci congue ut. Nunc ut magna ac quam bibendum elementum. Cras urna sapien, gravida eget velit eu, tempor consequat risus. Proin odio arcu, facilisis in fringilla sed, hendrerit eu nibh. Suspendisse non orci pretium risus egestas iaculis. </p>
+            </div>
+            <img src="https://s3-us-west-1.amazonaws.com/realisticshots/2016/0242.jpg">
+        </div>
+        <div class="slide">
+            <div class="slide-copy">
+                <h2>Slider Three</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque placerat dolor nibh, eget ultrices orci congue ut. Nunc ut magna ac quam bibendum elementum. Cras urna sapien, gravida eget velit eu, tempor consequat risus. Proin odio arcu, facilisis in fringilla sed, hendrerit eu nibh. Suspendisse non orci pretium risus egestas iaculis. </p>
+            </div>
+            <img src="https://40.media.tumblr.com/608873f19e745131dadb9e4ed8c7c8c8/tumblr_o4u3c7uObl1u60tx6o1_1280.jpg">
+        </div>
+        <div class="slide">
+            <div class="slide-copy">
+                <h2>Slider Four</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque placerat dolor nibh, eget ultrices orci congue ut. Nunc ut magna ac quam bibendum elementum. Cras urna sapien, gravida eget velit eu, tempor consequat risus. Proin odio arcu, facilisis in fringilla sed, hendrerit eu nibh. Suspendisse non orci pretium risus egestas iaculis. </p>
+            </div>
+            <img src="https://36.media.tumblr.com/7f978f40d78c0b935f3702cab36a86da/tumblr_o54fy5gqQz1u60tx6o1_1280.jpg">
+        </div>
+    </div>
+    <i id="next" class="fa fa-chevron-right" aria-hidden="true"></i>
 
+</div>
 <!-- menu section starts  -->
-
-<section class="menu" id="menu">
-
-    <div class="heading">
-        <span>our menu</span>
-        <h3>our dishes</h3>
-    </div>
-
-    <div class="box-container">
-
-        <a href="#" class="box">
-            <img src="image/menu-3.png" alt="">
-            <div class="content">
-                <h3>Toast bread</h3>
-                <div class="price">₹40.00</div>
-            </div>
-        </a>
-
-        <a href="#" class="box">
-            <img src="image/menu-1.png" alt="">
-            <div class="content">
-                <h3>burger</h3>
-                <div class="price">₹60.00</div>
-            </div>
-        </a>
-
-        <a href="#" class="box">
-            <img src="image/menu-4.png" alt="">
-            <div class="content">
-                <h3>hamburger</h3>
-                <div class="price">₹50.00</div>
-            </div>
-        </a>
-
-        <a href="#" class="box">
-            <img src="image/menu-5.png" alt="">
-            <div class="content">
-                <h3>french fries</h3>
-                <div class="price">₹30.00</div>
-            </div>
-        </a>
-
-        <a href="#" class="box">
-            <img src="image/menu-2.png" alt="">
-            <div class="content">
-                <h3>veg pizza</h3>
-                <div class="price">₹65.00</div>
-            </div>
-        </a>
-
-        <a href="#" class="box">
-            <img src="image/menu-6.png" alt="">
-            <div class="content">
-                <h3>cheese pizza</h3>
-                <div class="price">₹55.00</div>
-            </div>
-        </a>
-
-    </div>
-
-</section>
 
 <!-- menu section ends -->
 
