--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
 
 
 
-
+<script src="script.js"></script>
 
 
 
@@ -565,7 +565,7 @@
 
 
 <!-- custom js file link  -->
-<script src="js/script.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
